fixed overlay on card (not showing up)

--- a/css/master.css
+++ b/css/master.css
@@ -53,6 +53,30 @@ h1{
     width: 15%;
     background-color: white;
 }
+.overlay{
+    opacity: 0;
+    transition: all .3s;
+    color: white;
+    font-size: 10rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#portfolio .position-relative:hover .overlay{
+    cursor: pointer;
+    opacity: 1;
+    background-color: #1ABC9C70;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    
+    
+}
 .brace-dark{
     background-color: var(--dark-gray);
 }
